--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,8 +9,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #4C585B;
-    --foreground: #F4EDD3;
+    --background: #171717;
+    --foreground: #ffffff;
   }
 }
 
